Fixed clipping issue

--- a/src/app/feature/dialog/twitter-community/twitter-community.dialog.scss
+++ b/src/app/feature/dialog/twitter-community/twitter-community.dialog.scss
@@ -43,7 +43,7 @@
     }
 
     .community-member-list {
-        margin-left: -16px;
+        margin-left: -8px;
 
         .virtual-scroll {
             margin-left: 8px;
